--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,15 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: revert;
+    font-weight: revert;
+  }
 }
 
 @layer base {
@@ -79,4 +88,19 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins";
+}
+.DraftEditor-editorContainer {
+  background-color: white;
+  padding: 8px;
+  font-size: 14px;
+  font-weight: 400;
+  width: 100%;
+  min-height: 150px;
+  overflow-y: hidden;
+  overflow-y: auto;
+  z-index: 100;
+}
+.DraftEditor-editorContainer::placeholder {
+  background: red;
+  color: yellow;
 }
