--- a/src/index.css
+++ b/src/index.css
@@ -95,12 +95,16 @@
   font-size: 14px;
   font-weight: 400;
   width: 100%;
-  min-height: 150px;
+  min-height: 230px;
   overflow-y: hidden;
   overflow-y: auto;
   z-index: 100;
 }
-.DraftEditor-editorContainer::placeholder {
-  background: red;
-  color: yellow;
+.RichEditor-blockquote {
+  border-left: 5px solid #ededee;
+  margin: 0 1rem;
+  padding: 0.6rem;
+  line-height: normal;
+  font-style: italic;
+  background: 0 0;
 }
