--- a/src/index.css
+++ b/src/index.css
@@ -101,10 +101,24 @@
   z-index: 100;
 }
 .RichEditor-blockquote {
-  border-left: 5px solid #ededee;
-  margin: 0 1rem;
-  padding: 0.6rem;
-  line-height: normal;
+  border-left: 5px solid #eee;
+  color: #666;
+  font-family: "Hoefler Text", "Georgia", serif;
   font-style: italic;
-  background: 0 0;
+  margin: 0;
+  padding: 2px 15px;
+}
+.public-DraftStyleDefault-pre {
+  background-color: #e0e0e0;
+  font-size: 14px;
+  padding: 10px;
+  border-radius: 14px;
+  line-height: 1.5;
+  word-wrap: break-word;
+  color: #434343;
+}
+.public-DraftEditorPlaceholder-root {
+  color: #9ca3af;
+  font-size: 14px;
+  position: relative;
 }
